@@ -1,6 +1,6 @@
 Package: RcmdrMisc
 Version: 2.5-0
-Date: 2018-07-14
+Date: 2018-07-15
 Title: R Commander Miscellaneous Functions
 Authors@R: c(person("John", "Fox", role = c("aut", "cre"), email = "jfox@mcmaster.ca"),
     person("Robert", "Muenchen", role = "ctb"),
