@@ -3,6 +3,8 @@ Changes to Version 2.5-0
   o Synchronize version numbers with minor versions of the Rcmdr package.
   
   o Show axis ticks at observed values in discretePlot() (suggestion of Beatriz Lacruz Casaucau).
+  
+  o binnedCounts() reports percentage as well as frequency distribution (suggestion of Beatriz Lacruz Casaucau).
 
 Changes to Version 1.0-10
 
